# ha_addon_can_tcp_gateway

./: .gitignore  README.md  conftest.py  local_deploy.sh  repository.json  requirements.txt
.github/workflows/: ci.yml  docker.yml
can2tcp/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  run.sh
src/python/: gateway.py
src/rust/: Cargo.toml
src/rust/src/: main.rs
tests/python/: test_gateway.py
